<?xml version="1.0"?>
<package format="3">
  <name>sensor_msgs</name>
  <version>0.0.0</version>
  <description>Custom Depth and IMU messages for ROS2 sensors</description>
  <maintainer email="ialkady84@gmail.com">mypi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>